--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-**/target
+**/target/
 /target/
 
 bin/*
@@ -35,7 +35,7 @@ bin/*
 **/.settings
 **/.idea
 **/*.lock
+**/*.iml
 
 
-
-/common-errorlog/target/
+/common-errorlog/target/*
