added properties and dockerfile for  httpapiweb

--- a/http-generichttpapiweb/docker-compose.yml
+++ b/http-generichttpapiweb/docker-compose.yml
@@ -1,5 +1,4 @@
-version: "3.1"
+version: "3.8"
 services:
-  beacon-generichttpapi:
-    image: dk-reg.mas:5000/beacon-generichttpapi:2.0       
+  beacon-httpapi:
     build: .
